--- a/packages/deo-db/tsconfig.json
+++ b/packages/deo-db/tsconfig.json
@@ -12,7 +12,9 @@
     "moduleResolution": "bundler",
     "allowImportingTsExtensions": true,
     "verbatimModuleSyntax": true,
-    "noEmit": true,
+    "noEmit": false,
+    "declaration": true,
+    "rootDir": "src",
 
     // Best practices
     "strict": true,
@@ -25,5 +27,7 @@
     "noUnusedLocals": false,
     "noUnusedParameters": false,
     "noPropertyAccessFromIndexSignature": false
-  }
+  },
+  "include": ["src"],
+  "exclude": ["src/index.test.ts", "dist"]
 }
